--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
 .form-container{
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 200px;
+  margin-left: 450px;
   display: inline-block;
   border:2px solid black;
 padding: 10px;
